# validador_documento_rust

./: Cargo.toml  README.md
src/: lib.rs
